--- a/src/pages/docs/guides/nextjs.mdx
+++ b/src/pages/docs/guides/nextjs.mdx
@@ -35,9 +35,9 @@ In your `tailwind.config.js` file, configure the `purge` option with the paths t
 ```diff-js
   // tailwind.config.js
   module.exports = {
-    // ...,
 -   purge: [],
 +   purge: ['./pages/**/*.js', './components/**/*.js'],
+    darkMode: false, // or 'media' or 'class'
     theme: {
       extend: {}
     },
