--- a/src/pages/docs/utility-first.mdx
+++ b/src/pages/docs/utility-first.mdx
@@ -131,7 +131,7 @@ But using utility classes has a few important advantages over inline styles:
 - **Responsive design**. You can't use media queries in inline styles, but you can use Tailwind's [responsive utilities](/docs/responsive-design) to build fully responsive interfaces easily.
 - **Hover, focus, and other states**. Inline styles can't target states like hover or focus, but Tailwind's [state variants](/docs/hover-focus-and-other-states) make it easy to style those states with utility classes.
 
-This component is fully responsive and includes a button with hover styles, and is built entirely with utility classes:
+This component is fully responsive and includes a button with hover and focus styles, and is built entirely with utility classes:
 
 ```html purple
 <template preview class="p-12">
@@ -150,6 +150,21 @@ This component is fully responsive and includes a button with hover styles, and 
     </div>
   </div>
 </template>
+
+<div class="py-8 px-8 max-w-sm mx-auto bg-white rounded-xl shadow-md space-y-2 **sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-6**">
+  <img class="block mx-auto h-24 rounded-full **sm:mx-0 sm:flex-shrink-0**" src="/img/erin-lindford.jpg" alt="Woman's Face">
+  <div class="text-center space-y-2 **sm:text-left**">
+    <div class="space-y-0.5">
+      <p class="text-lg text-black font-semibold">
+        Erin Lindford
+      </p>
+      <p class="text-gray-500 font-medium">
+        Product Engineer
+      </p>
+    </div>
+    <button class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 **hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2**">Message</button>
+  </div>
+</div>
 ```
 
 ---
@@ -171,29 +186,31 @@ This is easily solved by [extracting components](/docs/extracting-components), u
 
 You can also use Tailwind's `@apply` feature to create CSS abstractions around common utility patterns.
 
-```html
-<template preview class="p-4 text-center">
-  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-    Button
-  </button>
+```html emerald
+<template preview>
+  <div class="text-center">
+    <button type="button" class="py-2 px-4 bg-emerald-500 text-white font-semibold rounded-lg shadow-md hover:bg-emerald-700 focus:outline-none" tabindex="-1">
+      Click me
+    </button>
+  </div>
 </template>
 
 <!-- Using utilities -->
-<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-  Button
+<button class="py-2 px-4 font-semibold rounded-lg shadow-md text-white bg-green-500 hover:bg-green-700">
+  Click me
 </button>
 
 <!-- Extracting classes using @apply -->
-<button class="btn btn-blue">
+<button class="**btn btn-green**">
   Button
 </button>
 
 <style>
-  .btn {
-    @apply font-bold py-2 px-4 rounded;
+  **.btn** {
+    @apply py-2 px-4 font-semibold rounded-lg shadow-md;
   }
-  .btn-blue {
-    @apply bg-blue-500 text-white hover:bg-blue-700;
+  **.btn-green** {
+    @apply text-white bg-green-500 hover:bg-green-700;
   }
 </style>
 ```
