--- a/src/pages/docs/divide-width.mdx
+++ b/src/pages/docs/divide-width.mdx
@@ -20,42 +20,60 @@ export const classes = {
 
 Add borders between horizontal elements using the `divide-x-{amount}` utilities.
 
-```html
+```html emerald
 <template preview>
-  <div class="grid grid-cols-3 divide-x divide-gray-400">
-    <div class="text-center">1</div>
-    <div class="text-center">2</div>
-    <div class="text-center">3</div>
+  <div class="grid grid-cols-3 divide-x divide-emerald-500">
+    <div class="text-center font-extrabold text-emerald-600 px-6">1</div>
+    <div class="text-center font-extrabold text-emerald-600 px-6">2</div>
+    <div class="text-center font-extrabold text-emerald-600 px-6">3</div>
   </div>
 </template>
+
+<div class="grid grid-cols-3 **divide-x** divide-green-500">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+</div>
 ```
 
 ## Add borders between stacked children
 
 Add borders between stacked elements using the `divide-y-{amount}` utilities.
 
-```html
+```html amber
 <template preview>
-  <div class="divide-y divide-gray-400">
-    <div class="text-center py-2">1</div>
-    <div class="text-center py-2">2</div>
-    <div class="text-center py-2">3</div>
+  <div class="grid grid-cols-1 divide-y divide-amber-500">
+    <div class="text-center font-extrabold text-amber-600 py-3">1</div>
+    <div class="text-center font-extrabold text-amber-600 py-3">2</div>
+    <div class="text-center font-extrabold text-amber-600 py-3">3</div>
   </div>
 </template>
+
+<div class="grid grid-cols-1 **divide-y** divide-yellow-500">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+</div>
 ```
 
 ## Reversing children order
 
 If your elements are in reverse order (using say `flex-row-reverse` or `flex-col-reverse`), use the `divide-x-reverse` or `divide-y-reverse` utilities to ensure the border is added to the correct side of each element.
 
-```html
+```html rose
 <template preview>
-  <div class="flex flex-col-reverse divide-y divide-y-reverse divide-gray-400">
-    <div class="text-center py-2">1</div>
-    <div class="text-center py-2">2</div>
-    <div class="text-center py-2">3</div>
+  <div class="flex flex-col-reverse divide-y divide-y-reverse divide-rose-400">
+    <div class="text-center font-extrabold text-rose-600 py-3">1</div>
+    <div class="text-center font-extrabold text-rose-600 py-3">2</div>
+    <div class="text-center font-extrabold text-rose-600 py-3">3</div>
   </div>
 </template>
+
+<div class="flex **flex-col-reverse divide-y divide-y-reverse** divide-rose-400">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+</div>
 ```
 
 ---
