--- a/src/pages/docs/divide-width.mdx
+++ b/src/pages/docs/divide-width.mdx
@@ -23,9 +23,9 @@ Add borders between horizontal elements using the `divide-x-{amount}` utilities.
 ```html emerald
 <template preview>
   <div class="grid grid-cols-3 divide-x divide-emerald-500">
-    <div class="text-center font-extrabold text-emerald-600 px-6">1</div>
-    <div class="text-center font-extrabold text-emerald-600 px-6">2</div>
-    <div class="text-center font-extrabold text-emerald-600 px-6">3</div>
+    <div class="text-center font-extrabold text-2xl text-emerald-600 px-6">1</div>
+    <div class="text-center font-extrabold text-2xl text-emerald-600 px-6">2</div>
+    <div class="text-center font-extrabold text-2xl text-emerald-600 px-6">3</div>
   </div>
 </template>
 
@@ -43,9 +43,9 @@ Add borders between stacked elements using the `divide-y-{amount}` utilities.
 ```html amber
 <template preview>
   <div class="grid grid-cols-1 divide-y divide-amber-500">
-    <div class="text-center font-extrabold text-amber-600 py-3">1</div>
-    <div class="text-center font-extrabold text-amber-600 py-3">2</div>
-    <div class="text-center font-extrabold text-amber-600 py-3">3</div>
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">1</div>
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">2</div>
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">3</div>
   </div>
 </template>
 
@@ -63,9 +63,9 @@ If your elements are in reverse order (using say `flex-row-reverse` or `flex-col
 ```html rose
 <template preview>
   <div class="flex flex-col-reverse divide-y divide-y-reverse divide-rose-400">
-    <div class="text-center font-extrabold text-rose-600 py-3">1</div>
-    <div class="text-center font-extrabold text-rose-600 py-3">2</div>
-    <div class="text-center font-extrabold text-rose-600 py-3">3</div>
+    <div class="text-center font-extrabold text-2xl text-rose-600 py-3">1</div>
+    <div class="text-center font-extrabold text-2xl text-rose-600 py-3">2</div>
+    <div class="text-center font-extrabold text-2xl text-rose-600 py-3">3</div>
   </div>
 </template>
 
