--- a/src/pages/docs/divide-opacity.mdx
+++ b/src/pages/docs/divide-opacity.mdx
@@ -18,19 +18,19 @@ export const classes = {
 
 Control the opacity of borders between elements using the `divide-opacity-{amount}` utilities.
 
-```html
-<template preview class="bg-checkered p-4">
+```html purple
+<template preview>
   <div class="divide-y-4 divide-black divide-opacity-25">
-    <div class="text-center py-2">1</div>
-    <div class="text-center py-2">2</div>
-    <div class="text-center py-2">3</div>
+    <div class="text-center font-extrabold text-2xl text-purple-600 py-3">1</div>
+    <div class="text-center font-extrabold text-2xl text-purple-600 py-3">2</div>
+    <div class="text-center font-extrabold text-2xl text-purple-600 py-3">3</div>
   </div>
 </template>
 
-<div class="divide-y-4 divide-black divide-opacity-25">
-  <div class="text-center py-2">1</div>
-  <div class="text-center py-2">2</div>
-  <div class="text-center py-2">3</div>
+<div class="divide-y-4 **divide-black divide-opacity-25**">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
 </div>
 ```
 
@@ -39,7 +39,7 @@ Control the opacity of borders between elements using the `divide-opacity-{amoun
 To control the opacity of borders between elements at a specific breakpoint, add a `{screen}:` prefix to any existing divide opacity utility. For example, use `md:divide-opacity-50` to apply the `divide-opacity-50` utility at only medium screen sizes and above.
 
 ```html
-<div class="divide-y-2 divide-blue-500 divide-opacity-75 md:divide-opacity-50">
+<div class="divide-y-2 divide-blue-500 divide-opacity-75 **md:divide-opacity-50**">
   <!-- ... -->
 </div>
 ```
