Update divide style example

--- a/src/pages/docs/divide-style.mdx
+++ b/src/pages/docs/divide-style.mdx
@@ -21,19 +21,19 @@ export const classes = {
 
 Control the border style between elements using the `divide-{style}` utilities.
 
-```html
+```html amber
 <template preview>
-  <div class="divide-y-2 divide-gray-500 divide-dashed">
-    <div class="text-center py-2">1</div>
-    <div class="text-center py-2">2</div>
-    <div class="text-center py-2">3</div>
+  <div class="divide-y-4 divide-amber-600 divide-dashed">
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">1</div>
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">2</div>
+    <div class="text-center font-extrabold text-2xl text-amber-600 py-3">3</div>
   </div>
 </template>
 
-<div class="divide-y-2 divide-gray-500 divide-dashed">
-  <div class="text-center py-2">1</div>
-  <div class="text-center py-2">2</div>
-  <div class="text-center py-2">3</div>
+<div class="divide-y-4 divide-amber-600 **divide-dashed**">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
 </div>
 ```
 
@@ -42,7 +42,7 @@ Control the border style between elements using the `divide-{style}` utilities.
 To control the border style between elements at a specific breakpoint, add a `{screen}:` prefix to any existing divide style utility. For example, use `md:divide-dashed` to apply the `divide-dashed` utility at only medium screen sizes and above.
 
 ```html
-<div class="divide-y-2 divide-dashed md:divide-solid">
+<div class="divide-y-2 divide-dashed **md:divide-solid**">
   <!-- ... -->
 </div>
 ```
