--- a/src/pages/docs/divide-style.mdx
+++ b/src/pages/docs/divide-style.mdx
@@ -30,7 +30,7 @@ Control the border style between elements using the `divide-{style}` utilities.
   </div>
 </template>
 
-<div class="divide-y-4 divide-amber-600 **divide-dashed**">
+<div class="divide-y-4 divide-yellow-600 **divide-dashed**">
   <div>1</div>
   <div>2</div>
   <div>3</div>
