--- a/src/pages/docs/background-opacity.mdx
+++ b/src/pages/docs/background-opacity.mdx
@@ -13,22 +13,22 @@ export const classes = { plugin }
 
 Control the opacity of an element's background color using the `bg-opacity-{amount}` utilities.
 
-```html
-<template preview class="bg-checkered p-4">
-  <div class="flex justify-around">
-    <div class="h-16 w-16 rounded bg-blue-500 bg-opacity-100"></div>
-    <div class="h-16 w-16 rounded bg-blue-500 bg-opacity-75"></div>
-    <div class="h-16 w-16 rounded bg-blue-500 bg-opacity-50"></div>
-    <div class="h-16 w-16 rounded bg-blue-500 bg-opacity-25"></div>
-    <div class="h-16 w-16 rounded bg-blue-500 bg-opacity-0"></div>
+```html indigo
+<template preview>
+  <div class="grid grid-cols-2 gap-2 sm:grid-cols-5">
+    <div class="h-16 rounded-md bg-opacity-100 bg-indigo-600 font-extrabold text-white flex justify-center items-center">100%</div>
+    <div class="h-16 rounded-md bg-opacity-75 bg-indigo-600 font-extrabold text-white flex justify-center items-center">75%</div>
+    <div class="h-16 rounded-md bg-opacity-50 bg-indigo-600 font-extrabold text-white flex justify-center items-center">50%</div>
+    <div class="h-16 rounded-md bg-opacity-25 bg-indigo-600 font-extrabold text-white flex justify-center items-center">25%</div>
+    <div class="h-16 rounded-md bg-opacity-0 bg-indigo-600 font-extrabold text-white flex justify-center items-center">0%</div>
   </div>
 </template>
 
-<div class="bg-blue-500 bg-opacity-100"></div>
-<div class="bg-blue-500 bg-opacity-75"></div>
-<div class="bg-blue-500 bg-opacity-50"></div>
-<div class="bg-blue-500 bg-opacity-25"></div>
-<div class="bg-blue-500 bg-opacity-0"></div>
+<div class="bg-indigo-600 **bg-opacity-100** ..."></div>
+<div class="bg-indigo-600 **bg-opacity-75** ..."></div>
+<div class="bg-indigo-600 **bg-opacity-50** ..."></div>
+<div class="bg-indigo-600 **bg-opacity-25** ..."></div>
+<div class="bg-indigo-600 **bg-opacity-0** ..."></div>
 ```
 
 ## Responsive
@@ -36,7 +36,7 @@ Control the opacity of an element's background color using the `bg-opacity-{amou
 To control an element's background color opacity at a specific breakpoint, add a `{screen}:` prefix to any existing background color opacity utility. For example, use `md:bg-opacity-50` to apply the `bg-opacity-50` utility at only medium screen sizes and above.
 
 ```html
-<div class="bg-blue-500 bg-opacity-75 md:bg-opacity-50">
+<div class="bg-blue-500 bg-opacity-75 **md:bg-opacity-50**">
   <!-- ... -->
 </div>
 ```
