Update background image examples

--- a/src/pages/docs/background-image.mdx
+++ b/src/pages/docs/background-image.mdx
@@ -15,9 +15,11 @@ export const classes = { plugin }
 To give an element a linear gradient background, use one of the `bg-gradient-{direction}` utilities, in combination with the [gradient color stop](/docs/gradient-color-stops) utilities.
 
 ```html
-<template preview class="p-8">
+<template preview>
   <div class="h-24 bg-gradient-to-r from-orange-400 via-red-500 to-pink-500"></div>
 </template>
+
+<div class="**bg-gradient-to-r from-orange-400 via-red-500 to-pink-500** ..."></div>
 ```
 
 ## Responsive
